--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,28 @@
 ---
 import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
+import Header from '../components/Header.astro'; 
+import Footer from '../components/Footer.astro';
+import Button from '../components/Button.astro'; 
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout>
-	<Welcome />
+	<body>
+		<Header />
+<main>
+
+<Button />
+
+</main>
+<footer>
+
+<Footer />
+
+</footer>
+	</body>
+	
+
 </Layout>
