knap og ballade

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,7 +6,7 @@
   <div class="logo">YEPHA</div>
   <nav class="menu">
     <a href="/home">Home</a>
-    <a href="/music">Music</a>
+    <a href="/src/">Music</a>
     <a href="/acting">Acting</a>
     <a href="/book">Book</a>
   </nav>
