--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -2,16 +2,15 @@
 ---
 
 
-
+<button>BOOK HER</button>
 <style>
 button {
-    padding: 10px 20px;
+    padding: 20px 40px;
     font-size: 25px;
     font-weight: bold;
     background-color: #6C0000;
     color: white;
     border: none;
-    border-radius: 5px;
-   
+    border-radius: 35px;
 }
 </style>
