--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,7 @@ import Liveevents from "../components/Liveevents.astro";
     <Header />
     <main>
       <Button />
+      <Liveevents />
     </main>
 
     <Footer />
