--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,11 @@
 ---
 
 <footer>
-   
+   <div class="container1">
+    <a href="index.astro">
+<img src="/public/billeder/sortlogo.svg" alt="">
+</a>
+   </div>
 
 <div class="nav_container">
 
@@ -12,7 +16,7 @@
     <a href="/nyhedsbrev">NYHEDSBREV</a>
     <a href="/about">ABOUT</a>
   
-    
+
 <div>
   <a href="https://www.tiktok.com/@_yepha" target="_blank">
     <img src="/public/billeder/tiktok.svg" alt="TikTok">
@@ -40,6 +44,13 @@
 
 
 <style>
+    .container1 {
+display: flex;
+align-items: center;
+justify-content: center;
+width: auto;
+
+    }
 .nav_container {
   display: flex;            
   align-items: center;     
