--- a/src/components/Liveevents.astro
+++ b/src/components/Liveevents.astro
@@ -21,4 +21,10 @@
   </div>
 </div>
 
-<style></style>
+<style>
+  .pdesktop,
+  .liveevents {
+    display: flex;
+    justify-content: center;
+  }
+</style>
