--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -48,7 +48,9 @@
 display: flex;
 align-items: center;
 justify-content: center;
+padding: 40px;
 width: auto;
+
 
     }
 .nav_container {
@@ -56,7 +58,8 @@ width: auto;
   align-items: center;     
   justify-content: space-evenly; 
   gap: 20px;    
-  padding-top: 20px;            
+  padding-top: 20px; 
+  padding-bottom: 40px;           
 }
 
 button {
