--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,13 +5,15 @@ import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import Button from "../components/Button.astro";
 import Liveevents from "../components/Liveevents.astro";
+import Spotyfi from "../components/Spotyfi.astro";
+
 ---
 
 <Layout>
   <body>
     <Header />
     <main>
-      <Button />
+		<Spotyfi />
       <Liveevents />
     </main>
 
