--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import Button from "../components/Button.astro";
 import Liveevents from "../components/Liveevents.astro";
+import About from "../components/About.astro";
 ---
 
 <Layout>
@@ -13,6 +14,7 @@ import Liveevents from "../components/Liveevents.astro";
     <main>
       <Button />
       <Liveevents />
+      <About />
     </main>
 
     <Footer />
