--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,8 @@ import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import Button from "../components/Button.astro";
 import Liveevents from "../components/Liveevents.astro";
+import Spotyfi from "../components/Spotyfi.astro";
+import About from "../components/About.astro";
 ---
 
 <Layout>
