--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,9 +1,9 @@
 <div class="about">
   <div>
-    <h1 class=".h2desktop" style="text-decoration: underline;">ABOUT</h1>
+    <h1 class="h2desktop" style="text-decoration: underline;">ABOUT</h1>
     <p class="tekstabout">Yepha har sat sit præg på den danske musikscene med en stil, der balancerer skarpe tekster og melodiske hooks. Fra Ufo Yepha-dagene til solokarrieren har han leveret tracks som "Det Stikker Helt Af" og "Ik Gør det," der stadig holder. Hans musik er en blanding af rå energi og catchy vibes, der rammer bredt. Med en lyd, der går sin egen vej, har Yepha inspireret både fans og nye kunstnere.</p>
   </div>
-  <div><img class="vinylplade" src="public/billeder/merch.svg" alt="merch" /></div>
+  <img src="public/billeder/merch.svg" alt="Drejende Billede" class="drejende-billede" />
 </div>
 
 <style>
@@ -20,6 +20,30 @@
   }
 
   .vinylplade {
-    width: 150px;
+    width: 200px;
+  }
+
+  .h2desktop {
+    display: flex;
+    justify-content: center;
+    font-family: "Inter", serif;
+  }
+
+  .container {
+    perspective: 1000px; /* Giver en 3D-effekt */
+  }
+
+  .drejende-billede {
+    width: 300px; /* Sæt bredden på billedet */
+    animation: drej 10s linear infinite; /* Animationen */
+  }
+
+  @keyframes drej {
+    from {
+      transform: rotate(0deg); /* Startposition */
+    }
+    to {
+      transform: rotate(360deg); /* Slutposition */
+    }
   }
 </style>
