--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import Button from "../components/Button.astro";
 import Liveevents from "../components/Liveevents.astro";
 import Spotyfi from "../components/Spotyfi.astro";
 import About from "../components/About.astro";
+import Instagramrulle from "../components/Instagramrulle.astro";
 ---
 
 <Layout>
@@ -16,6 +17,8 @@ import About from "../components/About.astro";
       <Spotyfi />
       <Liveevents />
       <About />
+
+      <Instagramrulle />
     </main>
 
     <Footer />
