--- a/src/components/Instagramrulle.astro
+++ b/src/components/Instagramrulle.astro
@@ -22,8 +22,8 @@
   <img class="billede1" src="public/billeder/insta.webp" alt="insta" />
   <img class="billede2" src="public/billeder/instablåtbillede.webp" alt="insta" />
   <div class="tobilleder">
-    <img src="public/billeder/instasortbillede.webp" alt="insta" />
-    <img src="public/billeder/instasorthviderdusød.webp" alt="insta" />
+    <img class="billede3" src="public/billeder/instasortbillede.webp" alt="insta" />
+    <img class="billede4" src="public/billeder/instasorthviderdusød.webp" alt="insta" />
   </div>
 
   <img src="public/billeder/instarødt.webp" alt="insta" />
