--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,6 +14,17 @@ import Instagramrulle from "../components/Instagramrulle.astro";
   <body>
     <Header />
     <main>
+
+      <div class="form-container">
+        <h2>NYHEDSBREV</h2>
+        <form action="" netlify>
+          <p class="nyhedstekst"> Skriv dig op til nyhedsbrevet og vær den første, der modtager besked om nye koncerter, merchandise og meget mere.</p>
+            <label for="email"></label>
+            <input type="email" id="email" name="email" required >
+            <button type="submit">TILMELD</button>
+        </form>
+    </div>
+
       <Spotyfi />
       <Liveevents />
       <About />
