--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -56,3 +56,52 @@ button {
   font-style: normal;
   font-size: 17px;
 }
+
+/*-----------NYHEDSBREV---------*/
+/* Formularcontainer */
+.form-container {
+  background-color: rgba(0, 0, 0, 0.84);
+  padding: 40px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+  width: 90%;
+  max-width: 400px;
+  text-align: center;
+}
+
+.nyhedstekst {
+  color: #ffffff;
+}
+
+h2 {
+  text-align: center;
+  font-size: 32px;
+  color: #ffffff;
+  margin-bottom: 20px;
+}
+
+input,
+textarea {
+  width: 90%; /* Bedre responsivitet */
+  padding: 15px; /* Juster padding */
+  margin-bottom: 15px;
+  border-radius: 5px;
+  border: 1px solid #ccc; /* Tydeligere kant */
+  font-size: 16px;
+  box-sizing: border-box;
+}
+
+button {
+  width: 90%; /* Fyld hele bredden */
+  padding: 15px; /* Øget padding for bedre klikoplevelse */
+  background-color: #ef4d2e;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  font-size: 19px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #ffffff;
+  color: #233249;
+}
