--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,8 @@ import Liveevents from "../components/Liveevents.astro";
 import Spotyfi from "../components/Spotyfi.astro";
 import About from "../components/About.astro";
 import Instagramrulle from "../components/Instagramrulle.astro";
+import Nyhedsbrev from "../components/Nyhedsbrev.astro";
+
 ---
 
 <Layout>
@@ -15,16 +17,10 @@ import Instagramrulle from "../components/Instagramrulle.astro";
     <Header />
     <main>
 
-      <div class="form-container">
-        <h2>NYHEDSBREV</h2>
-        <form action="" netlify>
-          <p class="nyhedstekst"> Skriv dig op til nyhedsbrevet og vær den første, der modtager besked om nye koncerter, merchandise og meget mere.</p>
-            <label for="email"></label>
-            <input type="email" id="email" name="email" required >
-            <button type="submit">TILMELD</button>
-        </form>
-    </div>
 
+
+    
+<Nyhedsbrev />
       <Spotyfi />
       <Liveevents />
       <About />
