--- a/src/pages/music.astro
+++ b/src/pages/music.astro
@@ -1,25 +1,16 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-import Header from '../components/Header.astro'; 
-import Footer from '../components/Footer.astro';
-import Button from '../components/Button.astro'; 
-
+import Welcome from "../components/Welcome.astro";
+import Layout from "../layouts/Layout.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import Button from "../components/Button.astro";
 ---
 
 <Layout>
-	<body>
-		<Header />
-<main>
+  <body>
+    <Header title="MUSIC" />
+    <main></main>
 
-
-
-
-</main>
-
-
-
-<Footer />
-	</body>
-
+    <Footer />
+  </body>
 </Layout>
