--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@
 
 
 <header>
-  <div class="logo">YEPHA</div>
+  <div class="logo">TILTEL</div>
   <nav class="menu">
     <a href="/">HOME</a>
     <a href="/music">MUSIC</a>
