--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@ const { title } = Astro.props;
 ---
 
 <header>
-  <div class="logo">YEPHA</div>
+  <div class="logo">{title}</div>
   <nav class="menu">
     <a href="/">HOME</a>
     <a href="/music">MUSIC</a>
@@ -30,100 +30,6 @@ const { title } = Astro.props;
       padding: 10px 20px;
       font-family: inter;
     }
-=======
-    
-    
-/* ---------------- Mobile-first styling ------------------  */
-
-@media (max-width: 768px) {
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 20px;
-  font-family: inter;
-}
-
-.logo {
-  font-size: 120px;
-  font-weight: bolder;
-}
-
-.menu {
-  display: none; /* Skjul menuen på mobile enheder */
-  flex-direction: column;
-  position: absolute;
-  top: 0px; 
-  right: 0;
-  bottom: 0px;
-  width: 100%;
-  background-color: #fff;
-  text-align: center;
-}
-
-.menu a {
-  text-decoration: none;
-  background-color: rgba(0, 0, 0, 0.91);
-  color: #fff;
-  font-size: 32px;
-  font-weight: bold;
-  padding: 30px 0;
-}
-
-/* Burger-ikon */
-.burger {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 30px;
-  height: 21px;
-  cursor: pointer;
-}
-
-.burger div {
-  height: 1.8px;
-  background-color: black;
-  border-radius: 25px;
-}
-
-/* Den øverste streg */
-.burger div:nth-child(1) {
-  width: 100%; /* Længst */
-}
-
-/* Den midterste streg */
-.burger div:nth-child(2) {
-  width: 70%; /* Mellem */
-  align-self: flex-end; /* Centrer denne */
-}
-
-/* Den nederste streg */
-.burger div:nth-child(3) {
-  width: 50%; /* Kortest */
-  align-self: flex-end; /* Flyt denne mod højre */
-}
-
-/* Når menuen er åben på mobil */
-.menu.active {
-  display: flex;
-}
-}
-/* -------------- DET HER ER DESKTOP ---------------- */
-@media (min-width: 1024px) {
-
-.hvidtlogo {
-display: none;
-
-}
-
-  header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    font-family: inter;
-  }
->>>>>>> a5d7bd36f1494f2e271122f4ed0cb19350ed5604
 
     .logo {
       font-size: 120px;
@@ -134,8 +40,9 @@ display: none;
       display: none; /* Skjul menuen på mobile enheder */
       flex-direction: column;
       position: absolute;
-      top: 60px; /* Juster denne værdi afhængigt af din header's højde */
+      top: 0px;
       right: 0;
+      bottom: 0px;
       width: 100%;
       background-color: #fff;
       text-align: center;
@@ -188,6 +95,7 @@ display: none;
       display: flex;
     }
   }
+
   /* -------------- DET HER ER DESKTOP ---------------- */
   @media (min-width: 1024px) {
     header {
