acting cille branch

--- a/src/pages/acting.astro
+++ b/src/pages/acting.astro
@@ -9,8 +9,27 @@ import Button from "../components/Button.astro";
 <Layout>
   <body>
     <Header title="ACTING" />
-    <main></main>
+    <main>
+
+
+<div class="img1"> 
+  <img src="/public/billeder/actingimgvenstre.webp" alt="">
+   <img src="/public/billeder/actingimghøjre.webp" alt="">
+</div>
+
+    </main>
 
     <Footer />
   </body>
 </Layout>
+
+<style>
+
+.img1 {
+display: flex;
+padding-top: -20px;
+}
+
+
+
+</style>
