--- a/src/pages/music.astro
+++ b/src/pages/music.astro
@@ -9,7 +9,16 @@ import Button from "../components/Button.astro";
 <Layout>
   <body>
     <Header title="MUSIC" />
-    <main></main>
+    <main>
+
+
+
+
+
+
+
+
+    </main>
 
     <Footer />
   </body>
