billeder på acting

--- a/src/pages/acting.astro
+++ b/src/pages/acting.astro
@@ -11,6 +11,12 @@ import Spotyfi from "../components/Spotyfi.astro";
   <body>
     <Header title="ACTING" />
     <main>
+
+<div class="img1">
+<img src="/public/billeder/actingimgvenstre.webp" alt="">
+<img src="/public/billeder/actingimghøjre.webp" alt="">
+</div>
+
       <div class="container">
         <Button />
 
@@ -26,6 +32,10 @@ import Spotyfi from "../components/Spotyfi.astro";
 </Layout>
 
 <style>
+    .img1 {
+    display: flex;
+    padding-top: -20px;
+  }
   .img {
     width: 100px;
   }
@@ -52,9 +62,4 @@ import Spotyfi from "../components/Spotyfi.astro";
   }
 </style>
 
-<style>
-  .img1 {
-    display: flex;
-    padding-top: -20px;
-  }
-</style>
+
