--- a/src/pages/acting.astro
+++ b/src/pages/acting.astro
@@ -25,6 +25,88 @@ import Spotyfi from "../components/Spotyfi.astro";
           <p class="p"><br />EXPLORE ON <br /><br /> SPOTIFY <br /></p>
         </div>
       </div>
+
+<div class="part1">
+ <h1>PROFIL</h1>
+<p>Jeppe er en alsidig skuespiller med en solid baggrund i  teknikker som han har trænet hos anerkendte undervisere som Thure Lindhardt og Chalotte Munk samt på William Esper Studio i New York med fokus på Meisner-teknik. Jeppe har erfaring fra improvisation og castingkurser med profiler som Jonas Elmer og Rie Hedegaard. Udover skuespil bringer han kreative kompetencer som musiker, tekstforfatter og performer.</p>
+</div>
+
+<div>
+  <img src="/public/billeder/acting1.webp" alt="">
+<img src="/public/billeder/acting2.webp" alt="">
+</div>
+     
+<h1>PROFIL INFO</h1>
+<div class="part2">
+
+<div class="faktabox">
+<p class="liste">
+  Højde: <br>
+    Vægt: <br>
+    Skostørrelse: <br>
+    Tøjstørrelse: <br>
+    Playing age: <br>
+    Fødselsår: <br>
+    Hårfarve: <br>
+    Øjenfarve: <br>
+    Modersmål: <br>
+    Sprog, kendskab:<br>
+    Dialekter:<br>
+    Kørekort: 
+ </p>
+ <p class="liste"> 
+183cm <br>
+85 kg <br>
+43 <br>
+L/Xl <br>
+28 – 44år <br>
+1983 <br>
+Brunt/kort <br>
+Blå/Grøn <br>
+Dansk <br>
+Engelsk <br>
+Fynsk, jysk, sjællandsk <br>
+Personbil, Motorcykel <br>
+ </p>
+ </div>
+
+<img src="/public/billeder/acting3.webp" alt="">
+</div>
+
+<h1>FILM & TV</h1>
+<p>Tidligere projekter
+Ørnen: En krimi-odyssé – 2006
+Arthur og Maltazars hævn – Dubbing, 2009
+
+2016
+Anti – Spillefilm
+Lillemand 2 – Sitcom, TV2 Zulu
+
+2017
+Jeg er William – Spillefilm
+
+2018
+Den som dræber – TV-serie
+Hånd i hånd – TV-serie
+
+2019
+32 – YouSee-serie
+
+2020
+Alfa – TV2 Zulu-serie
+Min fars krig – DR-serie
+Den verden vi valgte – Kortfilm
+Fugleflugten – Kortfilm
+
+2024
+Graverne – TV2-serie
+</p>
+
+<div>
+<img src="/public/billeder/acting4.webp" alt="">
+<img src="/public/billeder/acting5.webp" alt="">
+<img src="/public/billeder/acting6.webp" alt="">
+</div>
     </main>
 
     <Footer />
@@ -32,6 +114,30 @@ import Spotyfi from "../components/Spotyfi.astro";
 </Layout>
 
 <style>
+
+.part2 {
+display: grid;
+grid-template-columns: repeat(2, 1fr);
+gap: 2px;
+padding: 30px;
+
+}
+.liste {
+line-height: 2em;
+}
+
+.faktabox {
+display: grid;
+grid-template-columns: repeat(2, 1fr);
+padding: 65px;
+}
+
+.part1 {
+
+align-items: center;
+  }
+
+
     .img1 {
     display: flex;
     padding-top: -20px;
