--- a/src/pages/music.astro
+++ b/src/pages/music.astro
@@ -16,21 +16,21 @@ import Videomusik from "../components/Videomusik.astro";
         <Button />
 
         <div class="spotify">
-          <img class="img" src="public/billeder/spotyfi.svg" alt="" />
+          <img class="img" src="/billeder/spotyfi.svg" alt="" />
           <p class="p"><br />EXPLORE ON <br /><br /> SPOTIFY <br /></p>
         </div>
       </div>
       <div class="videoer">
         <div>
-          <img src="public/billeder/pigervideo.webp" alt="piger" />
+          <img src="/billeder/pigervideo.webp" alt="piger" />
           <h1>Piger</h1>
         </div>
         <div>
-          <img src="public/billeder/opmedhåret.webp" alt="piger" />
+          <img src="/billeder/opmedhåret.webp" alt="piger" />
           <h1>Op med håret</h1>
         </div>
         <div>
-          <img src="public/billeder/hjerneblødning.webp" alt="piger" />
+          <img src="/billeder/hjerneblødning.webp" alt="piger" />
           <h1>Hjerneblødning</h1>
         </div>
       </div>
