--- a/src/pages/acting.astro
+++ b/src/pages/acting.astro
@@ -26,17 +26,17 @@ import Spotyfi from "../components/Spotyfi.astro";
         </div>
       </div>
 
-<div class="part1">
- <h1>PROFIL</h1>
-<p>Jeppe er en alsidig skuespiller med en solid baggrund i  teknikker som han har trænet hos anerkendte undervisere som Thure Lindhardt og Chalotte Munk samt på William Esper Studio i New York med fokus på Meisner-teknik. Jeppe har erfaring fra improvisation og castingkurser med profiler som Jonas Elmer og Rie Hedegaard. Udover skuespil bringer han kreative kompetencer som musiker, tekstforfatter og performer.</p>
+<div >
+ <h1 class="overskrift">PROFIL</h1>
+<p class="part1">Jeppe er en alsidig skuespiller med en solid baggrund i  teknikker som han har trænet hos anerkendte undervisere som Thure Lindhardt og Chalotte Munk samt på William Esper Studio i New York med fokus på Meisner-teknik. Jeppe har erfaring fra improvisation og castingkurser med profiler som Jonas Elmer og Rie Hedegaard. Udover skuespil bringer han kreative kompetencer som musiker, tekstforfatter og performer.</p>
 </div>
 
-<div>
-  <img src="/public/billeder/acting1.webp" alt="">
+<div class="img2">
+<img src="/public/billeder/acting1.webp" alt="">
 <img src="/public/billeder/acting2.webp" alt="">
 </div>
      
-<h1>PROFIL INFO</h1>
+<h1 class="streg1">PROFIL INFO</h1>
 <div class="part2">
 
 <div class="faktabox">
@@ -73,36 +73,63 @@ Personbil, Motorcykel <br>
 <img src="/public/billeder/acting3.webp" alt="">
 </div>
 
-<h1>FILM & TV</h1>
-<p>Tidligere projekter
-Ørnen: En krimi-odyssé – 2006
-Arthur og Maltazars hævn – Dubbing, 2009
+<div class="streg-container">
+  <h1 class="streg2">FILM & TV</h1>
+</div>
+<div class="part3">
 
+ <div>
+<ul>
+  Tidligere projekter 
+    <li>Ørnen: En krimi-odyssé – 2006</li>
+    <li>Arthur og Maltazars hævn – Dubbing, 2009</li>
+</ul>
+
+<ul>
 2016
-Anti – Spillefilm
-Lillemand 2 – Sitcom, TV2 Zulu
+<li>Anti – Spillefilm</li>
+<li>Lillemand 2 – Sitcom, TV2 Zulu</li>
+</ul>
+ </div>
 
-2017
-Jeg er William – Spillefilm
-
-2018
-Den som dræber – TV-serie
-Hånd i hånd – TV-serie
-
-2019
-32 – YouSee-serie
-
-2020
-Alfa – TV2 Zulu-serie
-Min fars krig – DR-serie
-Den verden vi valgte – Kortfilm
-Fugleflugten – Kortfilm
-
-2024
-Graverne – TV2-serie
-</p>
 
 <div>
+  <ul>
+2017
+<li>Jeg er William – Spillefilm</li>
+</ul>
+
+  <ul>
+    2018
+    <li>Den som dræber – TV-serie</li>
+    <li>Hånd i hånd – TV-serie</li>
+  </ul>
+
+<ul>
+  2019
+<li>
+32 – YouSee-serie</li>
+</ul>
+</div>
+
+
+<div>
+  <ul>
+    2020
+<li>Alfa – TV2 Zulu-serie</li>
+<li>Min fars krig – DR-serie</li>
+<li>Den verden vi valgte – Kortfilm</li>
+<li>Fugleflugten – Kortfilm</li>
+  </ul>
+
+<ul>
+  2024
+<li>Graverne – TV2-serie</li>
+</ul>
+</div>
+</div>
+
+<div class="img3">
 <img src="/public/billeder/acting4.webp" alt="">
 <img src="/public/billeder/acting5.webp" alt="">
 <img src="/public/billeder/acting6.webp" alt="">
@@ -114,14 +141,54 @@ Graverne – TV2-serie
 </Layout>
 
 <style>
+.overskrift 
+{
+  text-align: center;
+}
+.part3
+{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* 3 kolonner */
+  gap: 20px; /* Afstand mellem kolonner */
+  padding: 20px; /* Indrykning omkring hele området */
+  line-height: 1.5;
+margin: 30px;
+}
+
+/*--------DET HER ER INFO OG IMG TIL-------- */
+.streg1 {
+display: flex;
+position: relative;
+right: 0px;
+display: inline-block;
+border-bottom: 1px solid black; 
+padding-left: 170px;
+}
+
+.streg-container {
+  text-align: center; /* Sørger for, at teksten er centreret */
+  position: relative; /* Nødvendig for at justere linjen */
+}
+.streg2 {
+  display: inline-block; /* Sørger for, at teksten er som et separat element */
+  position: relative;
+}
+.streg2 {
+  display: flex;
+  border-bottom: 1px solid black;
+  width: 50%; 
+  position: relative; /* Gør det muligt at flytte linjen med left */
+  left: 50%; 
+}
+
 
 .part2 {
 display: grid;
 grid-template-columns: repeat(2, 1fr);
 gap: 2px;
 padding: 30px;
-
 }
+
 .liste {
 line-height: 2em;
 }
@@ -131,17 +198,37 @@ display: grid;
 grid-template-columns: repeat(2, 1fr);
 padding: 65px;
 }
+/*---------------------------*/
 
-.part1 {
+.part1 
+{
+display: flex;
+text-align: center; 
+line-height: 2em;
+padding-left: 400px ;
+padding-right: 400px;
+}
 
-align-items: center;
-  }
-
+/*------- ALLE IMGER ------------*/
+.img3 {
+display: grid;
+grid-template-columns: repeat(3, 1fr);
+padding-left: 100px;
+}
+.img2 
+{
+display: grid;
+grid-template-columns: repeat(2, 1fr);
+padding-left: 120px;
+  margin: 50px
+}
 
     .img1 {
     display: flex;
     padding-top: -20px;
   }
+/*------------------------------*/
+
   .img {
     width: 100px;
   }
