--- a/src/pages/acting.astro
+++ b/src/pages/acting.astro
@@ -22,7 +22,7 @@ import Spotyfi from "../components/Spotyfi.astro";
 
         <div class="spotify">
           <img class="img" src="/public/billeder/imdb.svg" alt="" />
-          <p class="p"><br />EXPLORE ON <br /><br /> SPOTIFY <br /></p>
+          <p class="p"><br />EXPLORE ON <br /><br />IMDB<br /></p>
         </div>
       </div>
 
