--- a/src/components/Spotyfi.astro
+++ b/src/components/Spotyfi.astro
@@ -1,5 +1,7 @@
 ---
 import Button from "../components/Button.astro";
+const { title } = Astro.props;
+
 ---
 
 <div class="container">
@@ -7,7 +9,7 @@ import Button from "../components/Button.astro";
 
   <div class="spotify">
     <img class="img" src="/public/billeder/spotyfi.svg" alt="" />
-    <p class="p"><br />EXPLORE ON <br /><br /> SPOTIFY <br /></p>
+    <p class="p"><br />EXPLORE ON <br /><br />{title}<br /></p>
   </div>
 </div>
 
