--- a/src/pages/acting.astro
+++ b/src/pages/acting.astro
@@ -21,7 +21,7 @@ import Spotyfi from "../components/Spotyfi.astro";
         <Button />
 
         <div class="spotify">
-          <img class="img" src="/public/billeder/imdb.svg" alt="" />
+          <img class="img" src="/billeder/imdb.svg" alt="" />
           <p class="p"><br />EXPLORE ON <br /><br />IMDB<br /></p>
         </div>
       </div>
@@ -32,8 +32,8 @@ import Spotyfi from "../components/Spotyfi.astro";
 </div>
 
 <div class="img2">
-<img src="/public/billeder/acting1.webp" alt="">
-<img src="/public/billeder/acting2.webp" alt="">
+<img src="/billeder/acting1.webp" alt="">
+<img src="/billeder/acting2.webp" alt="">
 </div>
      
 <h1 class="streg1">PROFIL INFO</h1>
@@ -70,7 +70,7 @@ Personbil, Motorcykel <br>
  </p>
  </div>
 
-<img src="/public/billeder/acting3.webp" alt="">
+<img src="/billeder/acting3.webp" alt="">
 </div>
 
 <div class="streg-container">
@@ -130,9 +130,9 @@ Personbil, Motorcykel <br>
 </div>
 
 <div class="img3">
-<img src="/public/billeder/acting4.webp" alt="">
-<img src="/public/billeder/acting5.webp" alt="">
-<img src="/public/billeder/acting6.webp" alt="">
+<img src="/billeder/acting4.webp" alt="">
+<img src="/billeder/acting5.webp" alt="">
+<img src="/billeder/acting6.webp" alt="">
 </div>
     </main>
 
