--- a/src/components/Spotyfi.astro
+++ b/src/components/Spotyfi.astro
@@ -1,7 +1,6 @@
 ---
 import Button from "../components/Button.astro";
 const { title } = Astro.props;
-
 ---
 
 <div class="container">
@@ -10,6 +9,7 @@ const { title } = Astro.props;
   <div class="spotify">
     <img class="img" src="/public/billeder/spotyfi.svg" alt="" />
     <p class="p"><br />EXPLORE ON <br /><br />{title}<br /></p>
+    <img src="/billeder/Arrow.jpg" alt="pil" />
   </div>
 </div>
 
