--- a/src/pages/acting.astro
+++ b/src/pages/acting.astro
@@ -11,11 +11,10 @@ import Spotyfi from "../components/Spotyfi.astro";
   <body>
     <Header title="ACTING" />
     <main>
-
-<div class="img1">
-<img src="/public/billeder/actingimgvenstre.webp" alt="">
-<img src="/public/billeder/actingimghøjre.webp" alt="">
-</div>
+      <div class="img1">
+        <img src="/public/billeder/actingimgvenstre.webp" alt="" />
+        <img src="/public/billeder/actingimghøjre.webp" alt="" />
+      </div>
 
       <div class="container">
         <Button />
@@ -23,117 +22,113 @@ import Spotyfi from "../components/Spotyfi.astro";
         <div class="spotify">
           <img class="img" src="/billeder/imdb.svg" alt="" />
           <p class="p"><br />EXPLORE ON <br /><br />IMDB<br /></p>
+          <img src="/billeder/Arrow.jpg" alt="pil" />
         </div>
       </div>
 
-<div >
- <h1 class="overskrift">PROFIL</h1>
-<p class="part1">Jeppe er en alsidig skuespiller med en solid baggrund i  teknikker som han har trænet hos anerkendte undervisere som Thure Lindhardt og Chalotte Munk samt på William Esper Studio i New York med fokus på Meisner-teknik. Jeppe har erfaring fra improvisation og castingkurser med profiler som Jonas Elmer og Rie Hedegaard. Udover skuespil bringer han kreative kompetencer som musiker, tekstforfatter og performer.</p>
-</div>
+      <div>
+        <h1 class="overskrift">PROFIL</h1>
+        <p class="part1">Jeppe er en alsidig skuespiller med en solid baggrund i teknikker som han har trænet hos anerkendte undervisere som Thure Lindhardt og Chalotte Munk samt på William Esper Studio i New York med fokus på Meisner-teknik. Jeppe har erfaring fra improvisation og castingkurser med profiler som Jonas Elmer og Rie Hedegaard. Udover skuespil bringer han kreative kompetencer som musiker, tekstforfatter og performer.</p>
+      </div>
 
-<div class="img2">
-<img src="/billeder/acting1.webp" alt="">
-<img src="/billeder/acting2.webp" alt="">
-</div>
-     
-<h1 class="streg1">PROFIL INFO</h1>
-<div class="part2">
+      <div class="img2">
+        <img src="/billeder/acting1.webp" alt="" />
+        <img src="/billeder/acting2.webp" alt="" />
+      </div>
 
-<div class="faktabox">
-<p class="liste">
-  Højde: <br>
-    Vægt: <br>
-    Skostørrelse: <br>
-    Tøjstørrelse: <br>
-    Playing age: <br>
-    Fødselsår: <br>
-    Hårfarve: <br>
-    Øjenfarve: <br>
-    Modersmål: <br>
-    Sprog, kendskab:<br>
-    Dialekter:<br>
-    Kørekort: 
- </p>
- <p class="liste"> 
-183cm <br>
-85 kg <br>
-43 <br>
-L/Xl <br>
-28 – 44år <br>
-1983 <br>
-Brunt/kort <br>
-Blå/Grøn <br>
-Dansk <br>
-Engelsk <br>
-Fynsk, jysk, sjællandsk <br>
-Personbil, Motorcykel <br>
- </p>
- </div>
+      <h1 class="streg1">PROFIL INFO</h1>
+      <div class="part2">
+        <div class="faktabox">
+          <p class="liste">
+            Højde: <br />
+            Vægt: <br />
+            Skostørrelse: <br />
+            Tøjstørrelse: <br />
+            Playing age: <br />
+            Fødselsår: <br />
+            Hårfarve: <br />
+            Øjenfarve: <br />
+            Modersmål: <br />
+            Sprog, kendskab:<br />
+            Dialekter:<br />
+            Kørekort:
+          </p>
+          <p class="liste">
+            183cm <br />
+            85 kg <br />
+            43 <br />
+            L/Xl <br />
+            28 – 44år <br />
+            1983 <br />
+            Brunt/kort <br />
+            Blå/Grøn <br />
+            Dansk <br />
+            Engelsk <br />
+            Fynsk, jysk, sjællandsk <br />
+            Personbil, Motorcykel <br />
+          </p>
+        </div>
 
-<img src="/billeder/acting3.webp" alt="">
-</div>
+        <img src="/billeder/acting3.webp" alt="" />
+      </div>
 
-<div class="streg-container">
-  <h1 class="streg2">FILM & TV</h1>
-</div>
-<div class="part3">
+      <div class="streg-container">
+        <h1 class="streg2">FILM & TV</h1>
+      </div>
+      <div class="part3">
+        <div>
+          <ul>
+            Tidligere projekter
+            <li>Ørnen: En krimi-odyssé – 2006</li>
+            <li>Arthur og Maltazars hævn – Dubbing, 2009</li>
+          </ul>
 
- <div>
-<ul>
-  Tidligere projekter 
-    <li>Ørnen: En krimi-odyssé – 2006</li>
-    <li>Arthur og Maltazars hævn – Dubbing, 2009</li>
-</ul>
+          <ul>
+            2016
+            <li>Anti – Spillefilm</li>
+            <li>Lillemand 2 – Sitcom, TV2 Zulu</li>
+          </ul>
+        </div>
 
-<ul>
-2016
-<li>Anti – Spillefilm</li>
-<li>Lillemand 2 – Sitcom, TV2 Zulu</li>
-</ul>
- </div>
+        <div>
+          <ul>
+            2017
+            <li>Jeg er William – Spillefilm</li>
+          </ul>
 
+          <ul>
+            2018
+            <li>Den som dræber – TV-serie</li>
+            <li>Hånd i hånd – TV-serie</li>
+          </ul>
 
-<div>
-  <ul>
-2017
-<li>Jeg er William – Spillefilm</li>
-</ul>
+          <ul>
+            2019
+            <li>32 – YouSee-serie</li>
+          </ul>
+        </div>
 
-  <ul>
-    2018
-    <li>Den som dræber – TV-serie</li>
-    <li>Hånd i hånd – TV-serie</li>
-  </ul>
+        <div>
+          <ul>
+            2020
+            <li>Alfa – TV2 Zulu-serie</li>
+            <li>Min fars krig – DR-serie</li>
+            <li>Den verden vi valgte – Kortfilm</li>
+            <li>Fugleflugten – Kortfilm</li>
+          </ul>
 
-<ul>
-  2019
-<li>
-32 – YouSee-serie</li>
-</ul>
-</div>
+          <ul>
+            2024
+            <li>Graverne – TV2-serie</li>
+          </ul>
+        </div>
+      </div>
 
-
-<div>
-  <ul>
-    2020
-<li>Alfa – TV2 Zulu-serie</li>
-<li>Min fars krig – DR-serie</li>
-<li>Den verden vi valgte – Kortfilm</li>
-<li>Fugleflugten – Kortfilm</li>
-  </ul>
-
-<ul>
-  2024
-<li>Graverne – TV2-serie</li>
-</ul>
-</div>
-</div>
-
-<div class="img3">
-<img src="/billeder/acting4.webp" alt="">
-<img src="/billeder/acting5.webp" alt="">
-<img src="/billeder/acting6.webp" alt="">
-</div>
+      <div class="img3">
+        <img src="/billeder/acting4.webp" alt="" />
+        <img src="/billeder/acting5.webp" alt="" />
+        <img src="/billeder/acting6.webp" alt="" />
+      </div>
     </main>
 
     <Footer />
@@ -141,94 +136,88 @@ Personbil, Motorcykel <br>
 </Layout>
 
 <style>
+  .overskrift {
+    text-align: center;
+  }
+  .part3 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* 3 kolonner */
+    gap: 20px; /* Afstand mellem kolonner */
+    padding: 20px; /* Indrykning omkring hele området */
+    line-height: 1.5;
+    margin: 30px;
+  }
 
-.overskrift 
-{
-  text-align: center;
-}
-.part3
-{
-  display: grid;
-  grid-template-columns: repeat(3, 1fr); /* 3 kolonner */
-  gap: 20px; /* Afstand mellem kolonner */
-  padding: 20px; /* Indrykning omkring hele området */
-  line-height: 1.5;
-margin: 30px;
-}
+  /*--------DET HER ER INFO OG IMG TIL-------- */
+  .streg1 {
+    display: flex;
+    position: relative;
+    right: 0px;
+    display: inline-block;
+    border-bottom: 1px solid black;
+    padding-left: 170px;
+  }
 
-/*--------DET HER ER INFO OG IMG TIL-------- */
-.streg1 {
-display: flex;
-position: relative;
-right: 0px;
-display: inline-block;
-border-bottom: 1px solid black; 
-padding-left: 170px;
-}
+  .streg-container {
+    text-align: center; /* Sørger for, at teksten er centreret */
+    position: relative; /* Nødvendig for at justere linjen */
+  }
+  .streg2 {
+    display: inline-block; /* Sørger for, at teksten er som et separat element */
+    position: relative;
+  }
+  .streg2 {
+    display: flex;
+    border-bottom: 1px solid black;
+    width: 50%;
+    position: relative; /* Gør det muligt at flytte linjen med left */
+    left: 50%;
+  }
 
-.streg-container {
-  text-align: center; /* Sørger for, at teksten er centreret */
-  position: relative; /* Nødvendig for at justere linjen */
-}
-.streg2 {
-  display: inline-block; /* Sørger for, at teksten er som et separat element */
-  position: relative;
-}
-.streg2 {
-  display: flex;
-  border-bottom: 1px solid black;
-  width: 50%; 
-  position: relative; /* Gør det muligt at flytte linjen med left */
-  left: 50%; 
-}
+  .part2 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2px;
+    padding: 30px;
+  }
 
+  .liste {
+    line-height: 2em;
+  }
 
-.part2 {
-display: grid;
-grid-template-columns: repeat(2, 1fr);
-gap: 2px;
-padding: 30px;
-}
+  .faktabox {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 65px;
+  }
+  /*---------------------------*/
 
-.liste {
-line-height: 2em;
-}
+  .part1 {
+    display: flex;
+    text-align: center;
+    line-height: 2em;
+    padding-left: 400px;
+    padding-right: 400px;
+  }
 
-.faktabox {
-display: grid;
-grid-template-columns: repeat(2, 1fr);
-padding: 65px;
-}
-/*---------------------------*/
+  /*------- ALLE IMGER ------------*/
+  .img3 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding-left: 100px;
+  }
+  .img2 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding-left: 120px;
+    margin: 50px;
+  }
 
-.part1 
-{
-display: flex;
-text-align: center; 
-line-height: 2em;
-padding-left: 400px ;
-padding-right: 400px;
-}
-
-/*------- ALLE IMGER ------------*/
-.img3 {
-display: grid;
-grid-template-columns: repeat(3, 1fr);
-padding-left: 100px;
-}
-.img2 
-{
-display: grid;
-grid-template-columns: repeat(2, 1fr);
-padding-left: 120px;
-  margin: 50px
-}
-
-    .img1 {
+  .img1 {
     display: flex;
     padding-top: -20px;
   }
-/*------------------------------*/
+  /*------------------------------*/
 
   .img {
     width: 100px;
@@ -254,7 +243,4 @@ padding-left: 120px;
     font-family: "Inter", serif;
     line-height: 20px;
   }
-
 </style>
-
-
