--- a/src/pages/acting.astro
+++ b/src/pages/acting.astro
@@ -12,8 +12,8 @@ import Spotyfi from "../components/Spotyfi.astro";
     <Header title="ACTING" />
     <main>
       <div class="img1">
-        <img src="/public/billeder/actingimgvenstre.webp" alt="" />
-        <img src="/public/billeder/actingimghøjre.webp" alt="" />
+        <img src="/billeder/actingimgvenstre.webp" alt="" />
+        <img src="/billeder/actingimghøjre.webp" alt="" />
       </div>
 
       <div class="container">
