--- a/src/components/Instagramrulle.astro
+++ b/src/components/Instagramrulle.astro
@@ -3,31 +3,31 @@
 <div class="someikoner">
   <div>
     <a href="https://www.tiktok.com/@_yepha" target="_blank">
-      <img src="/public/billeder/tiktok.svg" alt="TikTok" />
+      <img src="/billeder/tiktok.svg" alt="TikTok" />
     </a>
   </div>
   <div>
     <a href="https://www.instagram.com/__yepha/?hl=da" target="_blank">
-      <img src="/public/billeder/instagram.svg" alt="Instagram" />
+      <img src="/billeder/instagram.svg" alt="Instagram" />
     </a>
   </div>
   <div>
     <a href="https://open.spotify.com/album/5fMgcuHMFaoFk0jbhNzXXv?si=NTGPeSkKRb2u7_kITmY-xw&fbclid=PAZXh0bgNhZW0CMTEAAaaZjs8wTIuiXWH60iIgjAdEndlKA3vy93ttMJWuWXWUt_lEfMBFSPcFmZs_aem_CkdrE-5x9C-FDbFgZ6Z2EQ&nd=1&dlsi=7ae159444818450e" target="_blank">
-      <img src="/public/billeder/spotyfi.svg" alt="Spotify" />
+      <img src="/billeder/spotyfi.svg" alt="Spotify" />
     </a>
   </div>
 </div>
 
 <div class="gallery">
-  <img class="billede1" src="public/billeder/insta.webp" alt="insta" />
-  <img class="billede2" src="public/billeder/instablåtbillede.webp" alt="insta" />
+  <img class="billede1" src="/billeder/insta.webp" alt="insta" />
+  <img class="billede2" src="/billeder/instablåtbillede.webp" alt="insta" />
   <div class="tobilleder">
-    <img class="billede3" src="public/billeder/instasortbillede.webp" alt="insta" />
-    <img class="billede4" src="public/billeder/instasorthviderdusød.webp" alt="insta" />
+    <img class="billede3" src="/billeder/instasortbillede.webp" alt="insta" />
+    <img class="billede4" src="/billeder/instasorthviderdusød.webp" alt="insta" />
   </div>
 
-  <img class="billede5" src="public/billeder/instarødt.webp" alt="insta" />
-  <img class="billede6" src="public/billeder/instasorthvid.webp" alt="insta" />
+  <img class="billede5" src="/billeder/instarødt.webp" alt="insta" />
+  <img class="billede6" src="/billeder/instasorthvid.webp" alt="insta" />
 </div>
 
 <style>
