--- a/src/components/Spotyfi.astro
+++ b/src/components/Spotyfi.astro
@@ -7,7 +7,7 @@ const { title } = Astro.props;
   <Button />
 
   <div class="spotify">
-    <img class="img" src="/public/billeder/spotyfi.svg" alt="" />
+    <img class="img" src="/billeder/spotyfi.svg" alt="" />
     <p class="p"><br />EXPLORE ON <br /><br />{title}<br /></p>
     <img src="/billeder/Arrow.jpg" alt="pil" />
   </div>
