--- a/src/components/Liveevents.astro
+++ b/src/components/Liveevents.astro
@@ -27,6 +27,15 @@
     display: flex;
     justify-content: center;
   }
+
+  p {
+    display: flex;
+    position: relative;
+    right: 0px;
+    display: inline-block;
+    border-bottom: 1px solid black;
+    padding-left: 170px;
+  }
   @media (min-width: 1000px) {
     .liveevents,
     .pdesktop {
