--- a/src/components/Videomusik.astro
+++ b/src/components/Videomusik.astro
@@ -10,4 +10,12 @@
     height: 100%;
     object-fit: cover;
   }
+
+  @media (max-width: 1024px) {
+    video {
+      width: 100%;
+      height: 40%;
+      object-fit: cover;
+    }
+  }
 </style>
