mobil tekst til acting

--- a/src/pages/acting.astro
+++ b/src/pages/acting.astro
@@ -69,7 +69,7 @@ import Spotyfi from "../components/Spotyfi.astro";
           </p>
         </div>
 
-        <img src="/billeder/acting3.webp" alt="" />
+        <img class="mobilimg1" src="/billeder/acting3.webp" alt="" />
       </div>
 
       <div class="streg-container">
@@ -136,6 +136,7 @@ import Spotyfi from "../components/Spotyfi.astro";
 </Layout>
 
 <style>
+
   .overskrift {
     text-align: center;
   }
@@ -243,4 +244,57 @@ import Spotyfi from "../components/Spotyfi.astro";
     font-family: "Inter", serif;
     line-height: 20px;
   }
+ 
+
+
+   @media (max-width: 1024px) {
+
+    .img {
+    width: 100px;
+  }
+  .part1 {
+    display: flex;
+    text-align: center;
+    line-height: 2em;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+
+    .part2 {
+  
+  }
+ .faktabox {
+
+  }
+  
+  .liste {
+margin: 50px;  
+}
+
+.mobilimg1 {
+  display: none; 
+}
+
+.img1 {
+  display: none;
+}
+
+  .img2 {
+display: none;
+
+  }
+.img3 {
+
+  display: none;
+}
+
+  .part3 {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr); /* 3 kolonner */
+    line-height: 1.5;
+    
+  }
+
+ }
 </style>
