--- a/src/pages/acting.astro
+++ b/src/pages/acting.astro
@@ -7,6 +7,7 @@ import Button from "../components/Button.astro";
 import Spotyfi from "../components/Spotyfi.astro";
 ---
 
+
 <Layout>
   <body>
     <Header title="ACTING" />
@@ -136,9 +137,9 @@ import Spotyfi from "../components/Spotyfi.astro";
 </Layout>
 
 <style>
-
   .overskrift {
     text-align: center;
+    font-family: font-family: "Inter", serif;
   }
   .part3 {
     display: grid;
@@ -293,7 +294,6 @@ display: none;
     display: grid;
     grid-template-columns: repeat(1, 1fr); /* 3 kolonner */
     line-height: 1.5;
-    
   }
 
  }
