--- a/src/components/Liveevents.astro
+++ b/src/components/Liveevents.astro
@@ -3,29 +3,25 @@
 <div class="liveevents">
   <div class="pdesktop">
     <div>
-      <p>14 nov 2025 YEPHA // Hotel Cecil</p>
-      <p>18 nov 2025 YEPHA // BREMEN</p>
-      <p>2 sep 2025 YEPHA // Royal Arena</p>
-      <p>16 sep 2025 YEPHA // VEGA</p>
-      <p>14 nov 2025 YEPHA // PUMPEHUSET</p>
-      <p>18 nov 2025 YEPHA // Maskinhallen</p>
-    </div>
-    <div>
-      <p class="billetter">BILLETER</p>
-      <p class="billetter">BILLETER</p>
-      <p class="billetter">BILLETER</p>
-      <p class="billetter">BILLETER</p>
-      <p class="billetter">BILLETER</p>
-      <p class="billetter">BILLETER</p>
+      <p>14 nov 2025 YEPHA // Hotel Cecil</p><p class="billetter">BILLETER</p>
+      <p>18 nov 2025 YEPHA // BREMEN</p><p class="billetter">BILLETER</p>
+      <p>2 sep 2025 YEPHA // Royal Arena</p><p class="billetter">BILLETER</p>
+      <p>16 sep 2025 YEPHA // VEGA</p><p class="billetter">BILLETER</p>
+      <p>14 nov 2025 YEPHA // PUMPEHUSET</p><p class="billetter">BILLETER</p>
+      <p>18 nov 2025 YEPHA // Maskinhallen</p><p class="billetter">BILLETER</p>
     </div>
   </div>
 </div>
 
 <style>
+  ul {
+    text-decoration: underline;
+  }
   .pdesktop,
   .liveevents {
     display: flex;
     justify-content: center;
+    text-decoration: underline;
   }
 
   p {
