--- a/src/pages/acting.astro
+++ b/src/pages/acting.astro
@@ -139,6 +139,7 @@ import Spotyfi from "../components/Spotyfi.astro";
   .overskrift {
     text-align: center;
     font-family: "Inter", serif;
+    font-style: normal;
   }
   .part3 {
     display: grid;
@@ -158,6 +159,7 @@ import Spotyfi from "../components/Spotyfi.astro";
     border-bottom: 1px solid black;
     padding-left: 170px;
     font-family: "Inter", serif;
+    font-style: normal;
   }
 
   .streg-container {
@@ -168,6 +170,7 @@ import Spotyfi from "../components/Spotyfi.astro";
     display: inline-block; /* Sørger for, at teksten er som et separat element */
     position: relative;
     font-family: "Inter", serif;
+    font-style: normal;
   }
   .streg2 {
     display: flex;
