live events virker nu tjek

--- a/src/components/Liveevents.astro
+++ b/src/components/Liveevents.astro
@@ -21,14 +21,15 @@
   }
 
   p {
-    border-bottom: 1px solid black;
-    padding-left: 100px;
   }
   .venstre-tekst {
-    text-indent: 180px;
+    text-indent: 0px;
+    border-bottom: 1px solid black;
+    padding-right: 20px;
   }
   .billetter {
     float: right;
+padding-left: 150px;
   }
 
   @media (min-width: 1000px) {
