--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -1,16 +1,15 @@
----
----
+<a href="#special-component">
+  <button>BOOK HER</button>
+</a>
 
-
-<button>BOOK HER</button>
 <style>
-button {
+  button {
     padding: 20px 40px;
     font-size: 25px;
     font-weight: bold;
-    background-color: #6C0000;
+    background-color: #6c0000;
     color: white;
     border: none;
     border-radius: 35px;
-}
+  }
 </style>
