--- a/src/pages/acting.astro
+++ b/src/pages/acting.astro
@@ -5,6 +5,7 @@ import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import Button from "../components/Button.astro";
 import Spotyfi from "../components/Spotyfi.astro";
+import FormComponent from "../components/FormComponent.astro";
 ---
 
 <Layout>
